4) miniupnpd: up to 1.9.20141204 version.<br>
5) xl2tpd: up to Nov 26, 2014 git version.<br>
6) kernel: update to 3.4.105.<br>
7) kernel: ralink_wifi: update to 2.7.2.0/2.6.2.0 (20140820) AP/STA drivers.<br>
8) kernel: ralink_wifi: add support 64 bit interface counters.<br>
9) kernel: ralink_wifi: backport ApCliRcvBeaconTime fix from 3.x.x.x driver.<br>
10) kernel: raeth: ppe: move hoocks to raeth instead off external code if raeth static build (more consistent code generate).<br>
11) kernel: raeth: move raeth up in link order place (mast be before ppp and wireless modules for more consistent code generate).<br>
12) kernel: net: pppoe: missed check for destination addr in PADT frame processing.<br>
13) kernel: net: core: Remove redundant call to nf_reset in dev_forward_skb.<br>
14) kernel: net: skbuff: reduce struct size if nf_trace disable.<br>
15) kernel: net: exclude skb_recycle code from real build, small codesize reduce.<br>
16) kernel: net: revert route cache garbage collector changes introdused in 3.4.105 (~5% speed regression after this changes).<br>
<br>
<br>
<b>2.0.x</b><br>
1) kernel: introduce and use generic init task(prepare import mips fixes).<br>
2) kernel: mips: backport some upstream fixes.<br>
3) kernel: fastpath: cleanup and small optimize.<br>
4) kernel: inetdevice: fixed signed integer overflow.<br>
5) kernel: net/raeth: small cleanup.<br>
6) kernel: net: avoid to hang up on sending due to sysctl configuration overflow.<br>
7) kernel: net: ipmr: limit MRT_TABLE identifiers.<br>
8) kernel: tcp: allow for bigger reordering level.<br>
9) kernel: netfilter: cttimeout: fix buffer overflow.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>