@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.104 Kernel Configuration
+# Linux/mips 3.4.105.1 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -179,6 +179,7 @@ CONFIG_HAVE_GENERIC_HARDIRQS=y
 CONFIG_GENERIC_HARDIRQS=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_IRQ_SHOW=y
+# CONFIG_RANDOMNESS_IRQ is not set
 
 #
 # RCU Subsystem
@@ -232,6 +233,7 @@ CONFIG_SLAB=y
 # CONFIG_PROFILING is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_HAVE_DMA_ATTRS=y
+CONFIG_HAVE_GENERIC_INIT_TASK=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 
 #
