@@ -51,8 +51,9 @@ struct rnd_state {
 extern void add_device_randomness(const void *, unsigned int);
 extern void add_input_randomness(unsigned int type, unsigned int code,
 				 unsigned int value);
+#ifdef CONFIG_RANDOMNESS_IRQ
 extern void add_interrupt_randomness(int irq, int irq_flags);
-
+#endif
 extern void get_random_bytes(void *buf, int nbytes);
 extern void get_random_bytes_arch(void *buf, int nbytes);
 void generate_random_uuid(unsigned char uuid_out[16]);
