@@ -172,8 +172,9 @@ handle_irq_event_percpu(struct irq_desc *desc, struct irqaction *action)
 		action = action->next;
 	} while (action);
 
+#ifdef CONFIG_RANDOMNESS_IRQ
 	add_interrupt_randomness(irq, flags);
-
+#endif
 	if (!noirqdebug)
 		note_interrupt(irq, desc, retval);
 	return retval;
